[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Fonts/Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Background/Sky.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player Duck Spritesheets/Duck idle.png" type="Texture" id=3]
[ext_resource path="res://Scripts/MenuUI.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Game.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 90
outline_size = 1
outline_color = Color( 0.294118, 0.356863, 0.670588, 0.784314 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 1
outline_color = Color( 0.294118, 0.356863, 0.670588, 0.784314 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.196078, 0.243137, 0.309804, 0.490196 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.152941, 0.152941, 0.211765, 0.686275 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.301961, 0.65098, 1, 0.784314 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
} ]

[node name="MenuUI" type="Node2D"]
script = ExtResource( 4 )
main_game_scene = ExtResource( 5 )

[node name="BackgroundImg" type="TextureRect" parent="."]
margin_right = 1025.0
margin_bottom = 598.0
texture = ExtResource( 2 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1025.0
margin_bottom = 598.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1025.0
margin_bottom = 598.0

[node name="GameName" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1025.0
margin_bottom = 297.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Desert Duck Dash"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 301.0
margin_right = 1025.0
margin_bottom = 598.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -65

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1025.0
margin_bottom = 181.0
rect_pivot_offset = Vector2( -464, -165 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 350
custom_constants/margin_top = 50
custom_constants/margin_left = 350
custom_constants/margin_bottom = 50

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 350.0
margin_top = 50.0
margin_right = 675.0
margin_bottom = 131.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 0.921569, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Play"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 1025.0
margin_bottom = 297.0
rect_pivot_offset = Vector2( -464, -165 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 350
custom_constants/margin_top = 50
custom_constants/margin_left = 350
custom_constants/margin_bottom = 50

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_left = 350.0
margin_top = 50.0
margin_right = 675.0
margin_bottom = 131.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 0.921569, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Quit"

[node name="PlayerAnimation" type="AnimatedSprite" parent="."]
position = Vector2( 504, 264 )
scale = Vector2( 4.7516, 4.73744 )
frames = SubResource( 8 )
animation = "Idle"

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/PlayButton" to="." method="_on_PlayButton_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/QuitButton" to="." method="_on_QuitButton_button_up"]
